<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnUyg1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/darkblue"
            android:textColor="@color/black"
            android:onClick="btnUyg1"
            android:text="@string/u4_uyg1_isim" />

        <Button
            android:id="@+id/btnUyg2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/darkblue"
            android:textColor="@color/black"
            android:onClick="btnUyg2"
            android:text="@string/u4_uyg2_isim" />

        <Button
            android:id="@+id/btnUyg3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/darkblue"
            android:textColor="@color/black"
            android:onClick="btnUyg3"
            android:text="@string/u4_uyg3_isim" />

        <Button
            android:id="@+id/btnUyg4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/darkblue"
            android:textColor="@color/black"
            android:onClick="btnUyg4"
            android:text="@string/u4_uyg4_isim" />

        <Button
            android:id="@+id/btnUyg5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/darkblue"
            android:textColor="@color/black"
            android:onClick="btnUyg5"
            android:text="@string/u4_uyg5_isim" />

        <Button
            android:id="@+id/btnUyg6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/darkblue"
            android:textColor="@color/black"
            android:onClick="btnUyg6"
            android:text="@string/u4_uyg6_isim" />

        <Button
            android:id="@+id/btnUyg7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/darkblue"
            android:textColor="@color/black"
            android:onClick="btnUyg7"
            android:text="@string/u4_uyg7_isim" />

        <Button
            android:id="@+id/btnUyg8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/darkblue"
            android:textColor="@color/black"
            android:onClick="btnUyg8"
            android:text="@string/u4_uyg8_isim" />

        <Button
            android:id="@+id/btnUyg9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/darkblue"
            android:textColor="@color/black"
            android:onClick="btnUyg9"
            android:text="@string/u4_uyg9_isim" />

        <Button
            android:id="@+id/btnUyg10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/darkblue"
            android:textColor="@color/black"
            android:onClick="btnUyg10"
            android:text="@string/u4_uyg10_isim" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnGS1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="btnGS1"
            android:backgroundTint="@color/gold"
            android:textColor="@color/black"
            android:text="@string/u4_gs1_isim" />

        <Button
            android:id="@+id/btnGS2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="btnGS2"
            android:backgroundTint="@color/gold"
            android:textColor="@color/black"
            android:text="@string/u4_gs2_isim" />
    </LinearLayout>
</LinearLayout>